Update shell command to be cross-platform